<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:checkable="true"
    android:clickable="true"
    android:elevation="10dp"
    android:focusable="true"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_LBL_searchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchDate" />

        <TextView
            android:id="@+id/history_LBL_packageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/packageNameVal" />

        <TextView
            android:id="@+id/history_LBL_ezLoggerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/ezLoggerIdVal" />

        <TextView
            android:id="@+id/history_LBL_costumerId"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/costumerIdVal" />

        <TextView
            android:id="@+id/history_LBL_sessionCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sessionCounterVal"
            android:visibility="gone" />


        <TextView
            android:id="@+id/history_LBL_manufacturer"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/manufacturerNameVal" />

        <TextView
            android:id="@+id/history_LBL_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dateBetween" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/history_BTN_showLogs"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/searchAgain"

            />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>