<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <LinearLayout
        android:id="@+id/account_LAY_titles"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_LBL_devKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/devKey" />

        <TextView
            android:id="@+id/account_LBL_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/account_LBL_email"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/account_LBL_phoneNumber"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phoneNumber" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_BTN_logout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/logout"
            android:theme="@style/Theme.MyButtons"
            app:cornerRadius="15dp" />

    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/account_LAY_data"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_weight="1"-->
    <!--        android:orientation="vertical">-->

    <!--    </LinearLayout>-->

</LinearLayout>